manifests/spoke/spoke-catalog/infra/external-secrets/controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: eso-external-secrets-webhook
  namespace: external-secrets
  labels:
    helm.sh/chart: external-secrets-2.2.0
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/instance: eso
    app.kubernetes.io/version: v2.2.0
    app.kubernetes.io/managed-by: Helm
    external-secrets.io/component: webhook
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: webhook
    protocol: TCP
    name: webhook
  selector:
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/instance: eso
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eso-external-secrets-cert-controller
  namespace: external-secrets
  labels:
    helm.sh/chart: external-secrets-2.2.0
    app.kubernetes.io/name: external-secrets-cert-controller
    app.kubernetes.io/instance: eso
    app.kubernetes.io/version: v2.2.0
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: external-secrets-cert-controller
      app.kubernetes.io/instance: eso
  template:
    metadata:
      labels:
        helm.sh/chart: external-secrets-2.2.0
        app.kubernetes.io/name: external-secrets-cert-controller
        app.kubernetes.io/instance: eso
        app.kubernetes.io/version: v2.2.0
        app.kubernetes.io/managed-by: Helm
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
      serviceAccountName: external-secrets-cert-controller
      automountServiceAccountToken: true
      hostNetwork: false
      containers:
      - name: cert-controller
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        image: ghcr.io/external-secrets/external-secrets:v2.2.0
        imagePullPolicy: IfNotPresent
        args:
        - certcontroller
        - --crd-requeue-interval=5m
        - --service-name=eso-external-secrets-webhook
        - --service-namespace=external-secrets
        - --secret-name=eso-external-secrets-webhook
        - --secret-namespace=external-secrets
        - --metrics-addr=:8080
        - --healthz-addr=:8081
        - --loglevel=info
        - --zap-time-encoding=epoch
        - --enable-partial-cache=true
        ports:
        - containerPort: 8080
          protocol: TCP
          name: metrics
        - containerPort: 8081
          protocol: TCP
          name: ready
        readinessProbe:
          httpGet:
            port: ready
            path: /readyz
          initialDelaySeconds: 20
          periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eso-external-secrets
  namespace: external-secrets
  labels:
    helm.sh/chart: external-secrets-2.2.0
    app.kubernetes.io/name: external-secrets
    app.kubernetes.io/instance: eso
    app.kubernetes.io/version: v2.2.0
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: external-secrets
      app.kubernetes.io/instance: eso
  template:
    metadata:
      labels:
        helm.sh/chart: external-secrets-2.2.0
        app.kubernetes.io/name: external-secrets
        app.kubernetes.io/instance: eso
        app.kubernetes.io/version: v2.2.0
        app.kubernetes.io/managed-by: Helm
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
      serviceAccountName: eso-external-secrets
      automountServiceAccountToken: true
      hostNetwork: false
      containers:
      - name: external-secrets
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        image: ghcr.io/external-secrets/external-secrets:v2.2.0
        imagePullPolicy: IfNotPresent
        args:
        - --concurrent=1
        - --metrics-addr=:8080
        - --loglevel=info
        - --zap-time-encoding=epoch
        ports:
        - containerPort: 8080
          protocol: TCP
          name: metrics
      dnsPolicy: ClusterFirst
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eso-external-secrets-webhook
  namespace: external-secrets
  labels:
    helm.sh/chart: external-secrets-2.2.0
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/instance: eso
    app.kubernetes.io/version: v2.2.0
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: external-secrets-webhook
      app.kubernetes.io/instance: eso
  template:
    metadata:
      labels:
        helm.sh/chart: external-secrets-2.2.0
        app.kubernetes.io/name: external-secrets-webhook
        app.kubernetes.io/instance: eso
        app.kubernetes.io/version: v2.2.0
        app.kubernetes.io/managed-by: Helm
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
      hostNetwork: false
      serviceAccountName: external-secrets-webhook
      automountServiceAccountToken: true
      containers:
      - name: webhook
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        image: ghcr.io/external-secrets/external-secrets:v2.2.0
        imagePullPolicy: IfNotPresent
        args:
        - webhook
        - --port=10250
        - --dns-name=eso-external-secrets-webhook.external-secrets.svc
        - --cert-dir=/tmp/certs
        - --check-interval=5m
        - --metrics-addr=:8080
        - --healthz-addr=:8081
        - --loglevel=info
        - --zap-time-encoding=epoch
        ports:
        - containerPort: 8080
          protocol: TCP
          name: metrics
        - containerPort: 10250
          protocol: TCP
          name: webhook
        - containerPort: 8081
          protocol: TCP
          name: ready
        readinessProbe:
          httpGet:
            port: ready
            path: /readyz
          initialDelaySeconds: 20
          periodSeconds: 5
        volumeMounts:
        - name: certs
          mountPath: /tmp/certs
          readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: eso-external-secrets-webhook
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: secretstore-validate
  labels:
    helm.sh/chart: external-secrets-2.2.0
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/instance: eso
    app.kubernetes.io/version: v2.2.0
    app.kubernetes.io/managed-by: Helm
    external-secrets.io/component: webhook
webhooks:
- name: validate.secretstore.external-secrets.io
  rules:
  - apiGroups:
    - external-secrets.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - secretstores
    scope: Namespaced
  clientConfig:
    service:
      namespace: external-secrets
      name: eso-external-secrets-webhook
      path: /validate-external-secrets-io-v1-secretstore
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
  timeoutSeconds: 5
  failurePolicy: Ignore
- name: validate.clustersecretstore.external-secrets.io
  rules:
  - apiGroups:
    - external-secrets.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - clustersecretstores
    scope: Cluster
  clientConfig:
    service:
      namespace: external-secrets
      name: eso-external-secrets-webhook
      path: /validate-external-secrets-io-v1-clustersecretstore
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
  timeoutSeconds: 5
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: externalsecret-validate
  labels:
    helm.sh/chart: external-secrets-2.2.0
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/instance: eso
    app.kubernetes.io/version: v2.2.0
    app.kubernetes.io/managed-by: Helm
    external-secrets.io/component: webhook
webhooks:
- name: validate.externalsecret.external-secrets.io
  rules:
  - apiGroups:
    - external-secrets.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - externalsecrets
    scope: Namespaced
  clientConfig:
    service:
      namespace: external-secrets
      name: eso-external-secrets-webhook
      path: /validate-external-secrets-io-v1-externalsecret
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
  timeoutSeconds: 5
  failurePolicy: Ignore
